--- a/wta2.html
+++ b/wta2.html
@@ -13,9 +13,23 @@
 <header id="portal-top">
 
 
+<link href="multiselect.css" rel="stylesheet">
+
 <!-- End Google Tag Manager (noscript) -->
     </header>
 
+
+
+<select id='testSelect1' multiple>
+  <option value='1'>Item 1</option>
+  <option value='2'>Item 2</option>
+  <option value='3'>Item 3</option>
+  <option value='4'>Item 4</option>
+  <option value='5'>Item 5</option>
+</select>
+
+<script src="multiselect.min.js"></script>
+document.multiselect('#testSelect1');
 
 
 <div id="hike-finder-app-container" class="hike-finder-app-container">
