--- a/index.html
+++ b/index.html
@@ -45,6 +45,90 @@
 }
 </style>
   
+  
+<style>
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 250px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+</style>
+
+
+<style>
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid blue;
+  border-bottom: 16px solid blue;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
+
 </head>
 
 
@@ -53,24 +137,11 @@
 <body ng-app="app">
 
 
-<!--<h1 ng-controller="HelloWorldCtrl">{{message}}</h1>
-<script>
-    angular.module("app", []).controller("HelloWorldCtrl", function($scope) {
-    $scope.message="Overabundant Fish Lakes of Washington State"
-    } )
-</script>-->
+
+
 
 <h1>PARIS Violations in Lat Year</h1>
 
-
-<!--
-<p>This page shows the locations of overabundant mountain fishing lakes,
-with data scraped from the
-<a href="https://wdfw.wa.gov/fishing/locations/high-lakes/overabundant">WDFW site</a>.
-</p>
-
-https://field-cady.github.io/mapweaver/
--->
 
 
 
@@ -104,7 +175,36 @@ https://field-cady.github.io/mapweaver/
 
 
 
-<button onclick='updateMarkers()'>Apply Filters</button>
+
+<button onclick='updateMarkersWithLoader();'>Apply Filters</button>
+
+<div class="loader" id="loader" style="display:none"></div>
+
+<div class="popup" onclick="loaderOff();console.log(18);setTimeout(updateMarkers,500);">Click me to toggle the popup!
+  <span class="popuptext" id="myPopup">Loading</span>
+  
+</div>
+
+<script>
+// When the user clicks on div, open the popup
+function loaderOn() {
+  myFunction('show')
+}
+function loaderOff() {
+    myFunction('hide')
+}
+function myFunction(state) {
+  var popup = document.getElementById("myPopup");
+  console.log('contains:', popup.classList.contains('show'));
+  var cur_state = popup.classList.contains('show') ? 'show' : 'hide'
+  if (cur_state != state) popup.classList.toggle("show");
+  console.log('contains:', popup.classList.contains('show'));
+  //updateMarkers()
+  //var popup = document.getElementById("myPopup");
+  //popup.classList.toggle("show");
+}
+</script>
+
 
 <br>
 
