--- a/index.html
+++ b/index.html
@@ -218,17 +218,17 @@ function myFunction(state) {
 
 
 <p>
-This site was created as a project by
+This site was created by
 <a href="http://www.fieldcady.com">Field Cady</a>.
+It is intended as a demo, rather than a fullly featured product.
+In the final version you will be able to:
+<ul>
+<li>Put multiple different datasets on the same map, with color-coded markers</li>
+<li>Download the plotted markers as a KML file that you can plug into Google Earth</li>
+<li>Filter markers by more reasonable criteria than the ones currently available</li>
+<li>Enjoy better formatting of every part of the page</li>
+</ul>
 If you have any feedback you can reach him at field.cady@gmail.com.
-If the map is too far out of date (see the last update above)
-you can ping him and ask him to update it.
-</p>
-
-<p>It has recently been updated to load more quickly.</p>
-
-<p>
-<div id="last_update_timestamp">The data was last updated at: </div>
 </p>
 
 <script type="text/javascript" src="myscripts.js"></script>
