--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   
   
 <style>
+.marker {
+  width: 250px;
+
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto;
