ready to show people

--- a/esdm/index.html
+++ b/esdm/index.html
@@ -74,9 +74,22 @@
 <body ng-app="app">
 
 
-<h1>ESDM Therapists  v9</h1>
+<h1>ESDM Therapists</h1>
 
-<div id='mapid' style='width: 100%; height: 50%;'></div>
+This is a web app to help parents and medical professionals find ESDM therapists
+in their area.  It is based on the therapist list on the
+<a href="https://www.esdm.co/esdm-therapists">ESDM website</a>.
+ESDM is one of the most powerful, evidence-based treatment modalities
+for children on the autistic spectrum.  It uses playful socialization
+to teach children the communication skills and social habits
+that will help them to lead productive, fulfilling lives.
+
+<p>
+Apologies for the fact that this website is not a polished product.
+It is a side project put together by Field Cady.
+You can contact him at field.cady@gmail.com.
+
+<div id='mapid' style='width: 100%; height: 80%;'></div>
 
 
 <script type="text/javascript" src="myscripts.js"></script>
