--- a/esdm/index.html
+++ b/esdm/index.html
@@ -1,13 +1,13 @@
 <head title="ESDM">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-34354121-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-34354121-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-34354121-1');
-</script>-->
+</script>
 
 
 <!--testing-->
