--- a/esdm/index.html
+++ b/esdm/index.html
@@ -85,6 +85,14 @@ to teach children the communication skills and social habits
 that will help them to lead productive, fulfilling lives.
 
 <p>
+Note that this map does not include all capable ESDM practitioners;
+it is only the fully licensed ones listed on the website
+(and even a few of them are not here, because their countries
+were not listed).
+Many therapists have learned and adopted the ESDM methodology but not
+gone through the formal certification process.
+
+<p>
 Apologies for the fact that this website is not a polished product.
 It is a side project put together by Field Cady.
 You can contact him at field.cady@gmail.com.
